Working on getting app to run in dev mode